// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`first active 1`] = `
<div>
  <div
    class="sc-bdVaJa GnUcV"
  >
    <button
      tabindex="0"
      class="MuiButtonBase-root-27 MuiButton-root-1 MuiButton-text-3 MuiButton-flat-6 sc-bwzfXH jBBLTz"
      type="button"
      options="[object Object]"
      name="male"
    >
      <span
        class="MuiButton-label-2"
      >
        <span>
          no icon
        </span>
      </span>
      <span
        class="MuiTouchRipple-root-30"
      />
    </button>
    <button
      tabindex="0"
      class="MuiButtonBase-root-27 MuiButton-root-1 MuiButton-text-3 MuiButton-flat-6 sc-bwzfXH gjHic"
      type="button"
      options="[object Object]"
      name="female"
    >
      <span
        class="MuiButton-label-2"
      >
        <span>
          with icon
        </span>
      </span>
      <span
        class="MuiTouchRipple-root-30"
      />
    </button>
  </div>
</div>
`;

exports[`first active 2`] = `
<div>
  <div
    class="sc-bdVaJa GnUcV"
  >
    <button
      tabindex="0"
      class="MuiButtonBase-root-27 MuiButton-root-1 MuiButton-text-3 MuiButton-flat-6 sc-bwzfXH jBBLTz"
      type="button"
      options="[object Object]"
      name="male"
    >
      <span
        class="MuiButton-label-2"
      >
        <span>
          no icon
        </span>
      </span>
      <span
        class="MuiTouchRipple-root-30"
      />
    </button>
    <button
      tabindex="0"
      class="MuiButtonBase-root-27 MuiButton-root-1 MuiButton-text-3 MuiButton-flat-6 sc-bwzfXH gjHic"
      type="button"
      options="[object Object]"
      name="female"
    >
      <span
        class="MuiButton-label-2"
      >
        <span>
          with icon
        </span>
      </span>
      <span
        class="MuiTouchRipple-root-30"
      />
    </button>
  </div>
</div>
`;

exports[`none active 1`] = `
<div>
  <div
    class="sc-bdVaJa GnUcV"
  >
    <button
      tabindex="0"
      class="MuiButtonBase-root-27 MuiButton-root-1 MuiButton-text-3 MuiButton-flat-6 sc-bwzfXH gjHic"
      type="button"
      options="[object Object]"
      name="male"
    >
      <span
        class="MuiButton-label-2"
      >
        <span>
          no icon
        </span>
      </span>
      <span
        class="MuiTouchRipple-root-30"
      />
    </button>
    <button
      tabindex="0"
      class="MuiButtonBase-root-27 MuiButton-root-1 MuiButton-text-3 MuiButton-flat-6 sc-bwzfXH gjHic"
      type="button"
      options="[object Object]"
      name="female"
    >
      <span
        class="MuiButton-label-2"
      >
        <span>
          with icon
        </span>
      </span>
      <span
        class="MuiTouchRipple-root-30"
      />
    </button>
  </div>
</div>
`;

exports[`none active 2`] = `
<div>
  <div
    class="sc-bdVaJa GnUcV"
  >
    <button
      tabindex="0"
      class="MuiButtonBase-root-27 MuiButton-root-1 MuiButton-text-3 MuiButton-flat-6 sc-bwzfXH gjHic"
      type="button"
      options="[object Object]"
      name="male"
    >
      <span
        class="MuiButton-label-2"
      >
        <span>
          no icon
        </span>
      </span>
      <span
        class="MuiTouchRipple-root-30"
      />
    </button>
    <button
      tabindex="0"
      class="MuiButtonBase-root-27 MuiButton-root-1 MuiButton-text-3 MuiButton-flat-6 sc-bwzfXH gjHic"
      type="button"
      options="[object Object]"
      name="female"
    >
      <span
        class="MuiButton-label-2"
      >
        <span>
          with icon
        </span>
      </span>
      <span
        class="MuiTouchRipple-root-30"
      />
    </button>
  </div>
</div>
`;

exports[`none active 3`] = `
<div>
  <div
    class="sc-bdVaJa GnUcV"
  >
    <button
      tabindex="0"
      class="MuiButtonBase-root-27 MuiButton-root-1 MuiButton-text-3 MuiButton-flat-6 sc-bwzfXH gjHic"
      type="button"
      options="[object Object]"
      name="male"
    >
      <span
        class="MuiButton-label-2"
      >
        <span>
          no icon
        </span>
      </span>
      <span
        class="MuiTouchRipple-root-30"
      />
    </button>
    <button
      tabindex="0"
      class="MuiButtonBase-root-27 MuiButton-root-1 MuiButton-text-3 MuiButton-flat-6 sc-bwzfXH gjHic"
      type="button"
      options="[object Object]"
      name="female"
    >
      <span
        class="MuiButton-label-2"
      >
        <span>
          with icon
        </span>
      </span>
      <span
        class="MuiTouchRipple-root-30"
      />
    </button>
  </div>
</div>
`;

exports[`second active 1`] = `
<div>
  <div
    class="sc-bdVaJa GnUcV"
  >
    <button
      tabindex="0"
      class="MuiButtonBase-root-27 MuiButton-root-1 MuiButton-text-3 MuiButton-flat-6 sc-bwzfXH gjHic"
      type="button"
      options="[object Object]"
      name="male"
    >
      <span
        class="MuiButton-label-2"
      >
        <span>
          no icon
        </span>
      </span>
      <span
        class="MuiTouchRipple-root-30"
      />
    </button>
    <button
      tabindex="0"
      class="MuiButtonBase-root-27 MuiButton-root-1 MuiButton-text-3 MuiButton-flat-6 sc-bwzfXH jBBLTz"
      type="button"
      options="[object Object]"
      name="female"
    >
      <span
        class="MuiButton-label-2"
      >
        <span>
          with icon
        </span>
      </span>
      <span
        class="MuiTouchRipple-root-30"
      />
    </button>
  </div>
</div>
`;
